# biorad1sc_reader

./: .gitignore  LICENSE.txt  README.rst  pypi_procedure  pyproject.toml  setup.cfg  setup.py
biorad1sc_reader/: __init__.py  cmd_bio1sc2tiff.py  cmd_bio1scmeta.py  cmd_bio1scread  cmd_bio1scread.py  constants.py  errors.py  parsing.py  reader.py  util.py
docs/: Makefile  api.rst  cmdline_utils.rst  conf.py  examples.rst  help2rst  index.rst  internals_ref.rst  intro.rst  make_cmdline_utils  read1sc.py  requirements-rtfd.txt  test.rst  tutorial.rst
misc/: gradient.tif  uniq_data_types.txt
notes/: data_types_uniq.txt  photoshop_gradient.tif  uniq_data_types.txt
src/biorad1sc_reader/: __init__.py  cmd_bio1sc2tiff.py  cmd_bio1scread.py  errors.py  parsing.py
tests/: notes.rst  test1_ref.tif  test1_ref_inv.tif  test3_ref.tif  test3_ref_inv.tif  test4_ref.tif  test5_ref_inv.tif  test_reader.py
tests/testdata/: makeref  makerefmeta  test1_ref_inv_sc.tif  test1_ref_meta.json  test1_ref_meta_compact.json  test1_ref_sc.tif  test2_ref.tif  test2_ref_inv.tif  test2_ref_inv_sc.tif  test2_ref_meta.json  test2_ref_meta_compact.json  test2_ref_sc.tif  test3_ref_inv_sc.tif  test3_ref_meta.json  test3_ref_meta_compact.json  test3_ref_sc.tif  test4_ref_inv.tif  test4_ref_inv_sc.tif  test4_ref_meta.json  test4_ref_meta_compact.json  test4_ref_sc.tif  test5_ref.tif  test5_ref_inv_sc.tif  test5_ref_meta.json  test5_ref_meta_compact.json  test5_ref_sc.tif
