[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biorad1sc-reader"
dynamic = ["version"]
description = "Allows reading Bio-Rad *.1sc image/analysis files."
readme = "README.rst"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "Matthew A. Clapp", email = "itsayellow+dev@gmail.com" },
]
keywords = [
    "1sc",
    "biology",
    "biorad",
    "image",
    "imaging",
    "scientific",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "Pillow",
]

[project.scripts]
bio1sc2tiff = "biorad1sc_reader.cmd_bio1sc2tiff:entry_point"
bio1scmeta = "biorad1sc_reader.cmd_bio1scmeta:entry_point"
bio1scread = "biorad1sc_reader.cmd_bio1scread:entry_point"

[project.urls]
Homepage = "https://github.com/itsayellow/biorad1sc_reader"

[tool.hatch.version]
path = "src/biorad1sc_reader/__about__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/biorad1sc_reader",
]

[tool.hatch.build.targets.sdist]
include = [
    "README.rst",
    "LICENSE.txt",
]

[tool.isort]
profile = "black"
known_first_party = ["helpers"]
