[metadata]
name = biorad1sc_reader
version = 0.7.0
author = Matthew A. Clapp
author_email = Matthew Clapp <itsayellow+dev@gmail.com>
description = Allows reading Bio-Rad *.1sc image/analysis files.
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/itsayellow/biorad1sc_reader
keywords = biorad, 1sc, biology, scientific, imaging, image
classifiers =
    Development Status :: 3 Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3'

[options]
packages = biorad1sc_reader
python_requires = >=3.6
py_modules = imgs2dir
install_requires =
    Pillow
test_suite = nose2.collector.collector
tests_require =
    nose2
    numpy

[options.entry_points]
console_scripts =
    bio1sc2tiff = biorad1sc_reader.cmd_bio1sc2tiff:entry_point
    bio1scmeta = biorad1sc_reader.cmd_bio1scmeta:entry_point
    bio1scread = biorad1sc_reader.cmd_bio1scread:entry_point
